--- a/src/style/style.css
+++ b/src/style/style.css
@@ -6,10 +6,11 @@
 
 body{
     background-color: rgba(86, 141, 229, 1.00);
+    cursor: pointer;
 }
 
 .centro{
-    height: 20vh;
+    height: 10vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -20,16 +21,40 @@ body{
     height: 44px;
     border: transparent;
     border-radius: 50px;
+    font-size: 15px;
 }
 
-.img{
-    height: 20vh;
+.google{
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
+    padding-bottom: 5px;
 }
 
 .foto_pesquisa{
-    padding-top: 200px;
+    padding-top: 300px;
+}
+
+.lupa{
+    position: absolute;
+    margin-top: 7px;
+    margin-left: 10px;
+    height: 30px;
+    width: 32px;
+}
+
+.microfone{
+    position: absolute;
+    margin-right: 50px;
+    padding-bottom: 50px;
+    height: 30px;
+    width: 32px;
+ 
+}
+
+.camera{
+    height: 30px;
+    width: 32px;
+    position: absolute;
 }
